[gd_scene load_steps=20 format=3 uid="uid://byp2jeuogun4v"]

[ext_resource type="Script" path="res://13th Final Assignment/final_assignment.gd" id="1_mg1gq"]
[ext_resource type="PackedScene" uid="uid://cmvvu6ki0eh20" path="res://scenes/scene_title.tscn" id="1_pm0ee"]
[ext_resource type="MeshLibrary" uid="uid://cqov5c6mav5cc" path="res://13th Final Assignment/resources/final_project_meshlib.tres" id="2_b7p45"]
[ext_resource type="PackedScene" uid="uid://dgr6e2hsbumgl" path="res://otherassets/GDQuest 3D WorldEnvi/GDQuest 3D WorldEnvi.tscn" id="3_jck68"]
[ext_resource type="Script" path="res://13th Final Assignment/resources/state_machine/gunner_state_res.gd" id="4_kgcvk"]
[ext_resource type="PackedScene" uid="uid://ddan3iyqj3f1d" path="res://13th Final Assignment/scenes/gunner_robot.tscn" id="4_t1rhy"]
[ext_resource type="Script" path="res://13th Final Assignment/resources/state_machine/gunner_idle.gd" id="5_ptkna"]
[ext_resource type="Script" path="res://13th Final Assignment/resources/state_machine/gunner_walk.gd" id="6_mqyon"]
[ext_resource type="PackedScene" uid="uid://dj5j3o656ilb7" path="res://13th Final Assignment/scenes/bone_minion.tscn" id="7_17sp8"]
[ext_resource type="Script" path="res://13th Final Assignment/scripts/camera_pivot.gd" id="7_iawvl"]

[sub_resource type="BoxMesh" id="BoxMesh_u0l14"]
size = Vector3(26.685, 1, 28.565)

[sub_resource type="LabelSettings" id="LabelSettings_ybagh"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_oor2e"]
font_size = 20

[sub_resource type="NavigationMesh" id="NavigationMesh_ge541"]
vertices = PackedVector3Array(-15.4868, 0.295007, -11.7135, -14.7368, 0.295007, -11.7135, -14.7368, 0.295007, -12.4635, -15.4868, 0.295007, -17.4635, -13.7368, 0.295007, -12.7135, -13.7368, 0.295007, -13.4635, -12.7368, 0.295007, -13.7135, -12.4868, 0.295007, -14.7135, -10.7368, 0.295007, -15.4635, -9.73677, 0.295007, -15.7135, -9.48677, 0.295007, -16.7135, -10.7368, 0.295007, -14.7135, -1.73677, 0.295007, -16.7135, -1.73677, 0.295007, -17.4635, 13.5132, 0.295007, -17.4635, 13.5132, 0.295007, -16.7135, 14.2632, 0.295007, -16.7135, 16.7632, 0.295007, -17.4635, 14.5132, 0.295007, -15.7135, 15.5132, 0.295007, -15.4635, 15.5132, 0.295007, -13.7135, 16.5132, 0.295007, -13.4635, 16.7632, 0.295007, -9.71345, -7.48677, 0.295007, -13.7135, -8.48677, 0.295007, -13.4635, -8.48677, 0.295007, -12.9635, -7.73677, 0.295007, -10.7135, -6.73677, 0.295007, -10.7135, 8.26323, 0.295007, -10.7135, 8.51323, 0.295007, -9.71345, 9.26323, 0.295007, -9.71345, 9.26323, 0.295007, -12.4635, 8.26323, 0.295007, -12.7135, 4.51323, 0.295007, -16.4635, 3.51323, 0.295007, -16.4635, 3.26323, 0.295007, -15.4635, 4.51323, 0.295007, -14.7135, 4.51323, 0.295007, -10.7135, 6.26323, 0.295007, -12.4635, 4.51323, 0.295007, -12.4635, 4.26323, 0.295007, -11.7135, 0.263233, 0.295007, -14.4635, -3.48677, 0.295007, -11.7135, -7.48677, 0.295007, -14.4635, 8.26323, 0.295007, -13.7135, 6.51323, 0.295007, -13.7135, -6.48677, 0.295007, -9.96345, -3.73677, 0.295007, -10.2135, 0.513233, 0.295007, -15.4635, 10.5132, 0.295007, -14.4635, 11.2632, 0.295007, -14.7135, 11.2632, 0.295007, -15.4635, 10.2632, 0.295007, -15.7135, 8.51323, 0.295007, -14.7135, 12.5132, 0.295007, -13.4635, 12.2632, 0.295007, -14.4635, 13.2632, 0.295007, -11.7135, 13.2632, 0.295007, -13.4635, 6.26323, 0.295007, -14.7135, 10.5132, 0.295007, -12.7135, 11.2632, 0.295007, -9.71345, 11.5132, 0.295007, -8.46345, 14.2632, 0.295007, -8.71345, 14.2632, 0.295007, -11.4635, 10.2632, 0.295007, -16.4635, -9.73677, 0.295007, -9.46345, -8.73677, 0.295007, -9.71345, -8.48677, 0.295007, -10.7135, -8.73677, 0.295007, -12.4635, -10.4868, 0.295007, -11.7135, -11.7368, 0.295007, -10.4635, -11.4868, 0.295007, -11.4635, -10.4868, 0.295007, -12.4635, -12.4868, 0.295007, -10.4635, -12.4868, 0.295007, -8.71345, -9.73677, 0.295007, -6.71345, -7.73677, 0.295007, -6.46345, -10.2368, 0.295007, -2.71345, -8.48677, 0.295007, -2.46345, -5.73677, 0.295007, -4.46345, -8.48677, 0.295007, 1.03655, -5.73677, 0.295007, 0.786549, -13.4868, 0.295007, -8.46345, -13.4868, 0.295007, -3.96345, -14.4868, 1.29501, -10.4635, -14.4868, 1.29501, -9.46345, -13.7368, 1.29501, -9.71345, -13.7368, 1.29501, -10.7135, -6.48677, 0.295007, -7.71345, -7.48677, 0.295007, -7.46345, -3.73677, 0.295007, -4.71345, -3.48677, 0.295007, -6.71345, 2.76323, 0.295007, -6.71345, 3.01323, 0.295007, -8.46345, 2.26323, 0.295007, -8.71345, -3.48677, 0.295007, -9.46345, 2.26323, 0.295007, -9.46345, 11.5132, 0.295007, 2.28655, 10.5132, 0.295007, 2.53655, 10.5132, 0.295007, 4.03655, 13.2632, 0.295007, 3.78655, 12.5132, 0.295007, 0.286549, 11.5132, 0.295007, 0.536549, 13.2632, 0.295007, 0.536549, 11.5132, 0.295007, -1.71345, 12.5132, 0.295007, -1.46345, 14.2632, 0.295007, -3.46345, 14.2632, 0.295007, -7.71345, 15.2632, 0.295007, -3.71345, 15.2632, 0.295007, -7.46345, 14.2632, 0.295007, 0.286549, 3.51323, 0.295007, -6.46345, 6.51323, 0.295007, -7.46345, 6.26323, 0.295007, -8.46345, 3.51323, 0.295007, -4.71345, 5.26323, 0.295007, -0.713451, 8.76323, 0.295007, 0.286549, 9.26323, 0.295007, 0.286549, 9.26323, 0.295007, -7.46345, 5.51323, 0.295007, 0.0365486, 3.01323, 0.295007, -4.46345, 3.76323, 0.295007, -0.713451, 3.26323, 0.295007, -0.463451, -1.48677, 0.295007, -4.46345, -1.73677, 0.295007, -2.46345, -3.73677, 0.295007, 2.53655, -3.23677, 0.295007, 4.28655, 3.26323, 0.295007, 4.28655, -3.48677, 0.295007, -2.46345, -12.7368, 0.295007, 3.53655, -11.7368, 0.295007, 3.28655, -11.4868, 0.295007, 2.28655, -10.7368, 0.295007, -2.46345, -14.4868, 0.295007, 5.28655, -12.7368, 0.295007, 5.28655, -13.7368, 0.295007, -3.46345, -10.7368, 0.295007, 2.28655, -14.4868, 0.295007, -3.46345, 16.5132, 0.295007, 2.28655, 15.5132, 0.295007, 2.53655, 15.5132, 0.295007, 3.28655, 16.5132, 0.295007, 3.53655, 16.7632, 0.295007, -1.46345, 14.5132, 0.295007, 14.2865, 13.5132, 0.295007, 14.5365, 13.5132, 0.295007, 15.2865, 16.7632, 0.295007, 15.2865, 16.5132, 0.295007, 10.2865, 15.5132, 0.295007, 10.5365, 15.5132, 0.295007, 12.2865, 14.5132, 0.295007, 12.5365, 5.51323, 0.295007, 6.28655, 4.76323, 0.295007, 6.53655, 5.01323, 0.295007, 8.28655, 8.51323, 0.295007, 8.53655, 8.51323, 0.295007, 6.53655, 11.2632, 0.295007, 12.5365, 12.2632, 0.295007, 12.2865, 12.2632, 0.295007, 10.5365, 8.51323, 0.295007, 10.2865, 13.2632, 0.295007, 10.2865, 13.2632, 0.295007, 8.53655, 8.26323, 0.295007, 0.536549, 13.2632, 0.295007, 5.28655, 10.5132, 0.295007, 6.28655, 14.2632, 0.295007, 8.28655, 14.2632, 0.295007, 5.53655, 6.76323, 0.295007, 10.5365, 7.01323, 0.295007, 13.2865, 11.2632, 0.295007, 13.2865, -3.73677, 0.295007, 8.28655, -3.23677, 0.295007, 6.53655, -3.73677, 0.295007, 6.28655, -3.73677, 0.295007, 4.53655, -5.48677, 0.295007, 2.53655, -9.48677, 0.295007, 4.53655, -9.48677, 0.295007, 7.28655, -8.73677, 0.295007, 7.28655, -8.48677, 0.295007, 4.28655, -8.48677, 0.295007, 8.28655, -11.4868, 1.29501, 4.53655, -11.4868, 1.29501, 6.28655, -10.7368, 1.29501, 6.53655, -10.7368, 1.29501, 4.28655, -3.73677, 0.295007, 11.5365, -3.23677, 0.295007, 11.2865, -3.73677, 0.295007, 10.5365, -10.4868, 0.295007, 10.5365, -10.7368, 0.295007, 9.53655, -11.7368, 0.295007, 9.28655, -13.7368, 0.295007, 11.2865, -13.4868, 0.295007, 12.2865, -11.7368, 0.295007, 12.2865, -1.73677, 0.295007, 14.2865, -1.73677, 0.295007, 13.5365, -3.73677, 0.295007, 13.2865, -7.48677, 0.295007, 14.2865, -11.7368, 0.295007, 7.53655, -12.7368, 0.295007, 7.28655, -11.4868, 0.295007, 13.2865, -7.73677, 0.295007, 13.2865, -14.4868, 0.295007, 11.2865, -0.486767, 0.295007, 13.2865, 2.26323, 0.295007, 14.2865, 2.51323, 0.295007, 13.2865, 4.26323, 0.295007, 8.53655, 4.26323, 0.295007, 10.2865, -0.486767, 0.295007, 11.5365, -15.4868, 0.295007, 14.5365, -15.4868, 0.295007, 15.2865, -13.7368, 0.295007, 15.2865, -13.7368, 0.295007, 14.5365, -9.48677, 1.29501, 15.2865, -8.48677, 1.29501, 15.2865, -8.73677, 1.29501, 14.5365, -9.73677, 1.29501, 14.5365)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(4, 2, 5), PackedInt32Array(5, 2, 3), PackedInt32Array(6, 5, 7), PackedInt32Array(7, 5, 3), PackedInt32Array(9, 8, 10), PackedInt32Array(8, 11, 7), PackedInt32Array(8, 7, 10), PackedInt32Array(10, 7, 3), PackedInt32Array(12, 10, 13), PackedInt32Array(13, 10, 3), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 17), PackedInt32Array(18, 16, 19), PackedInt32Array(19, 16, 17), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 17), PackedInt32Array(17, 22, 21), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 26), PackedInt32Array(26, 23, 27), PackedInt32Array(29, 28, 30), PackedInt32Array(30, 28, 31), PackedInt32Array(31, 28, 32), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(40, 39, 37), PackedInt32Array(37, 39, 38), PackedInt32Array(39, 40, 36), PackedInt32Array(36, 40, 35), PackedInt32Array(35, 40, 41), PackedInt32Array(41, 40, 42), PackedInt32Array(23, 43, 27), PackedInt32Array(27, 43, 42), PackedInt32Array(42, 43, 41), PackedInt32Array(44, 32, 45), PackedInt32Array(45, 32, 38), PackedInt32Array(46, 27, 47), PackedInt32Array(47, 27, 42), PackedInt32Array(32, 28, 38), PackedInt32Array(38, 28, 37), PackedInt32Array(41, 48, 35), PackedInt32Array(50, 49, 51), PackedInt32Array(51, 49, 52), PackedInt32Array(52, 49, 53), PackedInt32Array(55, 54, 50), PackedInt32Array(54, 57, 56), PackedInt32Array(45, 58, 44), PackedInt32Array(44, 58, 53), PackedInt32Array(49, 50, 59), PackedInt32Array(59, 50, 54), PackedInt32Array(59, 54, 56), PackedInt32Array(58, 36, 33), PackedInt32Array(63, 62, 56), PackedInt32Array(56, 62, 60), PackedInt32Array(60, 62, 61), PackedInt32Array(31, 59, 30), PackedInt32Array(30, 59, 60), PackedInt32Array(60, 59, 56), PackedInt32Array(52, 53, 64), PackedInt32Array(64, 53, 58), PackedInt32Array(64, 58, 33), PackedInt32Array(66, 65, 67), PackedInt32Array(67, 65, 68), PackedInt32Array(68, 65, 69), PackedInt32Array(69, 65, 70), PackedInt32Array(71, 69, 70), PackedInt32Array(69, 72, 68), PackedInt32Array(73, 70, 74), PackedInt32Array(74, 70, 65), PackedInt32Array(74, 65, 75), PackedInt32Array(67, 68, 26), PackedInt32Array(26, 68, 25), PackedInt32Array(76, 79, 75), PackedInt32Array(75, 79, 78), PackedInt32Array(75, 78, 77), PackedInt32Array(80, 78, 81), PackedInt32Array(81, 78, 79), PackedInt32Array(74, 75, 82), PackedInt32Array(82, 75, 83), PackedInt32Array(83, 75, 77), PackedInt32Array(87, 86, 84), PackedInt32Array(84, 86, 85), PackedInt32Array(89, 88, 76), PackedInt32Array(76, 88, 79), PackedInt32Array(79, 88, 90), PackedInt32Array(90, 88, 91), PackedInt32Array(93, 92, 94), PackedInt32Array(94, 92, 91), PackedInt32Array(94, 91, 95), PackedInt32Array(47, 95, 46), PackedInt32Array(46, 95, 88), PackedInt32Array(88, 95, 91), PackedInt32Array(95, 96, 94), PackedInt32Array(98, 97, 99), PackedInt32Array(99, 97, 100), PackedInt32Array(101, 103, 102), PackedInt32Array(102, 103, 97), PackedInt32Array(97, 103, 100), PackedInt32Array(105, 104, 106), PackedInt32Array(106, 104, 107), PackedInt32Array(107, 104, 61), PackedInt32Array(61, 62, 107), PackedInt32Array(108, 106, 109), PackedInt32Array(109, 106, 107), PackedInt32Array(103, 101, 110), PackedInt32Array(110, 101, 105), PackedInt32Array(110, 105, 106), PackedInt32Array(92, 93, 111), PackedInt32Array(111, 93, 113), PackedInt32Array(111, 113, 112), PackedInt32Array(114, 111, 112), PackedInt32Array(116, 115, 117), PackedInt32Array(117, 115, 114), PackedInt32Array(117, 114, 112), PackedInt32Array(117, 112, 118), PackedInt32Array(116, 119, 115), PackedInt32Array(120, 114, 121), PackedInt32Array(121, 114, 115), PackedInt32Array(120, 121, 122), PackedInt32Array(124, 123, 120), PackedInt32Array(125, 124, 126), PackedInt32Array(126, 124, 127), PackedInt32Array(127, 124, 122), PackedInt32Array(122, 124, 120), PackedInt32Array(125, 128, 124), PackedInt32Array(130, 129, 131), PackedInt32Array(131, 129, 132), PackedInt32Array(129, 134, 133), PackedInt32Array(135, 83, 132), PackedInt32Array(132, 83, 77), PackedInt32Array(132, 136, 131), PackedInt32Array(135, 132, 137), PackedInt32Array(137, 132, 129), PackedInt32Array(137, 129, 133), PackedInt32Array(139, 138, 140), PackedInt32Array(140, 138, 141), PackedInt32Array(141, 138, 142), PackedInt32Array(144, 143, 145), PackedInt32Array(145, 143, 146), PackedInt32Array(148, 147, 149), PackedInt32Array(149, 147, 146), PackedInt32Array(150, 149, 143), PackedInt32Array(143, 149, 146), PackedInt32Array(147, 141, 146), PackedInt32Array(146, 141, 142), PackedInt32Array(152, 151, 153), PackedInt32Array(153, 151, 155), PackedInt32Array(153, 155, 154), PackedInt32Array(157, 156, 158), PackedInt32Array(158, 156, 159), PackedInt32Array(161, 160, 158), PackedInt32Array(162, 119, 116), PackedInt32Array(100, 163, 99), PackedInt32Array(99, 163, 164), PackedInt32Array(155, 164, 154), PackedInt32Array(165, 161, 166), PackedInt32Array(166, 161, 163), PackedInt32Array(155, 151, 162), PackedInt32Array(162, 151, 119), PackedInt32Array(167, 159, 168), PackedInt32Array(168, 159, 156), PackedInt32Array(168, 156, 169), PackedInt32Array(154, 164, 159), PackedInt32Array(159, 164, 158), PackedInt32Array(158, 164, 161), PackedInt32Array(161, 164, 163), PackedInt32Array(172, 171, 170), PackedInt32Array(126, 173, 125), PackedInt32Array(125, 173, 174), PackedInt32Array(174, 173, 172), PackedInt32Array(176, 175, 177), PackedInt32Array(177, 175, 178), PackedInt32Array(177, 178, 179), PackedInt32Array(179, 178, 174), PackedInt32Array(179, 174, 172), PackedInt32Array(179, 172, 170), PackedInt32Array(81, 174, 80), PackedInt32Array(80, 174, 178), PackedInt32Array(180, 183, 181), PackedInt32Array(181, 183, 182), PackedInt32Array(186, 185, 184), PackedInt32Array(188, 187, 189), PackedInt32Array(189, 187, 192), PackedInt32Array(189, 192, 190), PackedInt32Array(190, 192, 191), PackedInt32Array(194, 193, 195), PackedInt32Array(195, 193, 196), PackedInt32Array(198, 197, 189), PackedInt32Array(192, 187, 199), PackedInt32Array(199, 187, 200), PackedInt32Array(200, 187, 184), PackedInt32Array(184, 187, 186), PackedInt32Array(133, 134, 198), PackedInt32Array(190, 201, 189), PackedInt32Array(189, 201, 198), PackedInt32Array(198, 201, 133), PackedInt32Array(196, 200, 195), PackedInt32Array(195, 200, 184), PackedInt32Array(194, 202, 193), PackedInt32Array(193, 202, 203), PackedInt32Array(203, 202, 204), PackedInt32Array(152, 153, 205), PackedInt32Array(167, 168, 206), PackedInt32Array(206, 168, 204), PackedInt32Array(170, 171, 185), PackedInt32Array(185, 171, 207), PackedInt32Array(207, 171, 205), PackedInt32Array(205, 171, 152), PackedInt32Array(185, 186, 170), PackedInt32Array(202, 207, 204), PackedInt32Array(204, 207, 206), PackedInt32Array(206, 207, 205), PackedInt32Array(211, 210, 208), PackedInt32Array(208, 210, 209), PackedInt32Array(215, 214, 212), PackedInt32Array(212, 214, 213)]
filter_ledge_spans = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_53daj"]
albedo_color = Color(0.2484, 0.2484, 0.2484, 1)

[sub_resource type="BoxMesh" id="BoxMesh_quo2d"]
material = SubResource("StandardMaterial3D_53daj")
size = Vector3(33.685, 0.2, 34.31)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7oll5"]
data = PackedVector3Array(-16.8425, 0.1, 17.155, 16.8425, 0.1, 17.155, -16.8425, -0.1, 17.155, 16.8425, 0.1, 17.155, 16.8425, -0.1, 17.155, -16.8425, -0.1, 17.155, 16.8425, 0.1, -17.155, -16.8425, 0.1, -17.155, 16.8425, -0.1, -17.155, -16.8425, 0.1, -17.155, -16.8425, -0.1, -17.155, 16.8425, -0.1, -17.155, 16.8425, 0.1, 17.155, 16.8425, 0.1, -17.155, 16.8425, -0.1, 17.155, 16.8425, 0.1, -17.155, 16.8425, -0.1, -17.155, 16.8425, -0.1, 17.155, -16.8425, 0.1, -17.155, -16.8425, 0.1, 17.155, -16.8425, -0.1, -17.155, -16.8425, 0.1, 17.155, -16.8425, -0.1, 17.155, -16.8425, -0.1, -17.155, 16.8425, 0.1, 17.155, -16.8425, 0.1, 17.155, 16.8425, 0.1, -17.155, -16.8425, 0.1, 17.155, -16.8425, 0.1, -17.155, 16.8425, 0.1, -17.155, -16.8425, -0.1, 17.155, 16.8425, -0.1, 17.155, -16.8425, -0.1, -17.155, 16.8425, -0.1, 17.155, 16.8425, -0.1, -17.155, -16.8425, -0.1, -17.155)

[sub_resource type="Resource" id="Resource_vgx8o"]
script = ExtResource("5_ptkna")

[sub_resource type="Resource" id="Resource_byeiw"]
script = ExtResource("6_mqyon")

[node name="FinalAssignment" type="Node3D" node_paths=PackedStringArray("player_ref")]
script = ExtResource("1_mg1gq")
player_ref = NodePath("GunnerRobot")

[node name="SafeSpawnArea" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46662, 0, 0)
visible = false
mesh = SubResource("BoxMesh_u0l14")

[node name="SceneTitle" parent="." instance=ExtResource("1_pm0ee")]
label_text = "Final Assignment"
display_fps = true

[node name="Control" parent="SceneTitle" index="0"]
mouse_filter = 1

[node name="Label" parent="SceneTitle/Control" index="0"]
text = "Final Assignment"

[node name="GameUI" type="Control" parent="SceneTitle/Control" index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SceneTitle/Control/GameUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -45.0
offset_right = 325.0
offset_bottom = -20.0
grow_vertical = 0

[node name="ScoreLabel" type="Label" parent="SceneTitle/Control/GameUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score : 0"
label_settings = SubResource("LabelSettings_ybagh")

[node name="ReferenceRect" type="ReferenceRect" parent="SceneTitle/Control/GameUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="SprintLabel" type="Label" parent="SceneTitle/Control/GameUI/VBoxContainer"]
layout_mode = 2
text = "Sprint Meter :"
label_settings = SubResource("LabelSettings_oor2e")

[node name="SprintMeter" type="ProgressBar" parent="SceneTitle/Control/GameUI/VBoxContainer"]
layout_mode = 2
step = 1.0
value = 100.0

[node name="Panel" type="PanelContainer" parent="SceneTitle/Control" index="5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -43.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0

[node name="ToggleVBox" type="VBoxContainer" parent="SceneTitle/Control/Panel"]
layout_mode = 2

[node name="EscLabel" type="Label" parent="SceneTitle/Control/Panel/ToggleVBox"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Press Esc to toggle mouse visibility"
horizontal_alignment = 1
autowrap_mode = 3

[node name="FullscreenBtn" type="CheckButton" parent="SceneTitle/Control/Panel/ToggleVBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Toggle Fullscreen "

[node name="ResetSceneBtn" type="Button" parent="SceneTitle/Control/Panel/ToggleVBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 20
text = "Reset Scene"

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_ge541")

[node name="FloorMesh" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.605734, -0.104993, -1.05845)
layers = 3
mesh = SubResource("BoxMesh_quo2d")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/FloorMesh"]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/FloorMesh/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7oll5")

[node name="GridMap" type="GridMap" parent="NavigationRegion3D"]
mesh_library = ExtResource("2_b7p45")
cell_size = Vector3(1, 1, 1)
collision_layer = 4
collision_mask = 11
data = {
"cells": PackedInt32Array(65533, 65525, 0, 0, 65525, 0, 1, 65525, 0, 65535, 65525, 0, 65534, 65525, 0, 3, 65525, 0, 2, 65525, 0, 3, 65526, 0, 4, 65526, 0, 5, 65526, 0, 6, 65526, 0, 7, 65526, 0, 7, 65527, 0, 8, 65527, 0, 9, 65527, 0, 10, 65527, 0, 10, 1, 0, 10, 0, 0, 10, 65535, 0, 10, 65534, 0, 10, 65533, 0, 10, 65532, 0, 10, 65531, 0, 10, 65530, 0, 10, 65529, 0, 10, 65528, 0, 11, 65535, 0, 9, 5, 0, 9, 4, 0, 9, 3, 0, 9, 2, 0, 9, 1, 0, 7, 9, 0, 6, 9, 0, 5, 9, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 4, 4, 0, 4, 3, 0, 4, 2, 0, 4, 1, 0, 4, 0, 0, 65534, 12, 0, 65533, 12, 0, 65531, 9, 0, 65530, 9, 0, 65529, 9, 0, 65528, 9, 0, 65527, 9, 0, 65526, 9, 0, 65526, 8, 0, 65525, 8, 0, 65525, 7, 0, 65525, 6, 0, 65524, 6, 0, 65525, 5, 0, 65524, 5, 0, 65524, 4, 0, 65525, 4, 0, 65526, 65534, 0, 65526, 65535, 0, 65526, 0, 0, 65526, 1, 0, 65526, 2, 0, 65526, 3, 0, 65525, 3, 0, 65520, 65531, 0, 65520, 65532, 0, 65520, 65533, 0, 65520, 65534, 0, 65520, 65535, 0, 65520, 0, 0, 65520, 1, 0, 65520, 2, 0, 65520, 3, 0, 65520, 4, 0, 65520, 5, 0, 65520, 6, 0, 65520, 7, 0, 65520, 8, 0, 65520, 9, 0, 65520, 10, 0, 65520, 11, 0, 65520, 12, 0, 65521, 12, 0, 65521, 13, 0, 65522, 13, 0, 65523, 13, 0, 65523, 14, 0, 65524, 14, 0, 65525, 14, 0, 65526, 15, 0, 65526, 14, 0, 65527, 14, 0, 65527, 15, 0, 65528, 15, 0, 65529, 15, 0, 65530, 15, 0, 65531, 15, 0, 65532, 15, 0, 65533, 15, 0, 65534, 15, 0, 65535, 15, 0, 0, 15, 0, 1, 15, 0, 2, 15, 0, 3, 15, 0, 3, 14, 0, 65531, 1, 0, 65531, 0, 0, 65531, 65535, 0, 65531, 65534, 0, 65531, 65533, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65533, 65531, 0, 65533, 65530, 0, 65534, 65530, 0, 65535, 65530, 0, 0, 65530, 0, 1, 65530, 0, 2, 65530, 0, 65528, 65526, 0, 65528, 65527, 0, 65527, 65527, 0, 65527, 65528, 0, 65521, 65531, 0, 65521, 65530, 0, 65521, 65529, 0, 65521, 65528, 0, 65521, 65527, 0, 65521, 65526, 0, 65521, 65525, 0, 65522, 65526, 0, 65522, 65525, 0, 65522, 65524, 0, 65523, 65524, 0, 65523, 65523, 0, 65524, 65523, 0, 65524, 65522, 0, 65527, 65520, 0, 65527, 65521, 0, 65526, 65521, 0, 65526, 65522, 0, 65525, 65522, 0, 65535, 65520, 0, 65534, 65520, 0, 65533, 65520, 0, 65532, 65520, 0, 65531, 65520, 0, 65530, 65520, 0, 65529, 65520, 0, 65528, 65520, 0, 65535, 65519, 0, 0, 65519, 0, 1, 65519, 0, 2, 65519, 0, 2, 65518, 0, 11, 65518, 0, 10, 65518, 0, 9, 65518, 0, 8, 65518, 0, 7, 65518, 0, 6, 65518, 0, 5, 65518, 0, 4, 65518, 0, 3, 65518, 0, 5, 65522, 0, 9, 65522, 0, 11, 65519, 0, 12, 65519, 0, 12, 65520, 0, 13, 65520, 0, 13, 65521, 0, 14, 65521, 0, 14, 65523, 0, 14, 65522, 0, 15, 65527, 0, 15, 65526, 0, 15, 65525, 0, 15, 65524, 0, 15, 65523, 0, 16, 65533, 0, 16, 65532, 0, 16, 65531, 0, 16, 65530, 0, 16, 65529, 0, 16, 65528, 0, 16, 65527, 0, 15, 1, 0, 15, 0, 0, 15, 65535, 0, 15, 65534, 0, 15, 65533, 0, 14, 4, 0, 14, 3, 0, 14, 2, 0, 14, 1, 0, 15, 9, 0, 15, 8, 0, 15, 7, 0, 15, 6, 0, 15, 5, 0, 15, 4, 0, 14, 11, 0, 14, 10, 0, 14, 9, 0, 13, 13, 0, 13, 12, 0, 13, 11, 0, 12, 14, 0, 12, 13, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0)
}

[node name="WorldEnvironment" parent="." instance=ExtResource("3_jck68")]

[node name="Lighting" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(0.737065, 0.456275, -0.498546, -0.0532571, 0.774609, 0.630194, 0.67372, -0.437943, 0.595237, -3.3202, 8.46247, 17.5436)
light_color = Color(0.85311, 0.56549, 0.271943, 1)
light_energy = 12.469
shadow_enabled = true
spot_range = 15.4275
spot_angle = 69.6191

[node name="SpotLight3D3" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(-0.996986, -0.00559, -0.0773833, -0.0532571, 0.774609, 0.630194, 0.056419, 0.632416, -0.772572, -3.3202, 8.46247, -15.998)
light_color = Color(0.85311, 0.56549, 0.271943, 1)
light_energy = 12.469
shadow_enabled = true
spot_range = 15.4275
spot_angle = 69.6191

[node name="SpotLight3D2" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(-0.0295913, 0.629588, -0.776365, -0.0532571, 0.774609, 0.630194, 0.998142, 0.0599952, 0.0106083, -17.1894, 8.46247, 2.62266)
light_color = Color(0.85311, 0.56549, 0.271943, 1)
light_energy = 12.469
shadow_enabled = true
spot_range = 15.4275
spot_angle = 69.6191

[node name="SpotLight3D4" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(0.0493047, -0.62828, 0.776423, -0.0532571, 0.774609, 0.630194, -0.997363, -0.0724216, 0.0047315, 18.9422, 8.46247, 2.62266)
light_color = Color(0.85311, 0.56549, 0.271943, 1)
light_energy = 12.469
shadow_enabled = true
spot_range = 15.4275
spot_angle = 69.6191

[node name="SpotLight3D5" type="SpotLight3D" parent="Lighting"]
transform = Transform3D(0.0722475, -0.996932, -0.0301188, 0.00689824, -0.0296975, 0.999535, -0.997363, -0.0724217, 0.00473151, 0.969357, 8.46247, -0.202522)
light_color = Color(0.85311, 0.56549, 0.271943, 1)
light_energy = 12.469
shadow_enabled = true
spot_range = 15.4275
spot_angle = 69.6191

[node name="GunnerRobot" parent="." node_paths=PackedStringArray("camera_pivot", "bullets_groupnode", "sprint_progress_bar") instance=ExtResource("4_t1rhy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.697403, 0)
possible_state = Array[ExtResource("4_kgcvk")]([SubResource("Resource_vgx8o"), SubResource("Resource_byeiw")])
camera_pivot = NodePath("../CameraPivot")
bullets_groupnode = NodePath("../Bullets")
sprint_progress_bar = NodePath("../SceneTitle/Control/GameUI/VBoxContainer/SprintMeter")

[node name="Bullets" type="Node3D" parent="."]

[node name="CameraPivot" type="Marker3D" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("7_iawvl")
character = NodePath("../GunnerRobot")

[node name="RobotCamera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 1.18006e-07, -9.42033e-08, 0, 0.62388, 0.78152, 1.50996e-07, 0.78152, -0.62388, -0.887, 4.384, -1.648)
current = true
fov = 82.4

[node name="Enemies" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="BoneMinion" parent="Enemies" instance=ExtResource("7_17sp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 2)
target_character = NodePath("../../GunnerRobot")

[node name="BoneMinion2" parent="Enemies" instance=ExtResource("7_17sp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 9)
target_character = NodePath("../../GunnerRobot")

[node name="BoneMinion3" parent="Enemies" instance=ExtResource("7_17sp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 6)
target_character = NodePath("../../GunnerRobot")

[node name="BoneMinion4" parent="Enemies" instance=ExtResource("7_17sp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -11)
target_character = NodePath("../../GunnerRobot")

[node name="BoneMinion5" parent="Enemies" instance=ExtResource("7_17sp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5723, 0.0545984, -0.617168)
target_character = NodePath("../../GunnerRobot")

[node name="EnemySpawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[connection signal="toggled" from="SceneTitle/Control/Panel/ToggleVBox/FullscreenBtn" to="." method="_on_fullscreen_btn_toggled"]
[connection signal="pressed" from="SceneTitle/Control/Panel/ToggleVBox/ResetSceneBtn" to="." method="_on_reset_scene_btn_pressed"]
[connection signal="child_exiting_tree" from="Enemies" to="." method="_on_enemies_child_exiting_tree"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]

[editable path="SceneTitle"]
